--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -11,7 +11,7 @@ main.index-page {
 	}
 }
 
-//TOP ARTICLE = FIRST ARTICLE BELOW HEADER
+//TOP ARTICLE (first article below the header)
 
 .top-article {
 	background: $bg-color-article;
@@ -24,18 +24,22 @@ main.index-page {
 	&__text-wrapper {
 		width: 100%;
 		text-align: left;
-		padding: 4vh 8vw;
+		padding: 6vh 8vw;
+		align-self: center;
+	}
 
-		h2 {
-			color: $heading-color-2;
+	h2 {
+		color: $heading-color-2;
+		padding-top: 3vh;
+		@media (min-width: 670px) {
+			padding-top: 0;
 		}
-
-		p {
-			padding-top: 4vh;
-			strong {
-				color: $highlight-color;
-				font-weight: 700;
-			}
+	}
+	p {
+		padding-top: 4vh;
+		strong {
+			color: $highlight-color;
+			font-weight: 700;
 		}
 	}
 
@@ -56,15 +60,15 @@ main.index-page {
 	}
 }
 
-//ARTICLE COLLECTION
+//SECTION WITH 3 ARTICLES
 
 .articles.index {
-	padding: 5vh 5vh;
+	padding: 6vh 6vw;
 	@media (min-width: 670px) {
-		padding: 10vh 10vh;
+		padding: 8vh 8vw;
 	}
 	h2 {
-		padding-bottom: 5vh;
+		padding: 3vh 3vw;
 		text-align: center;
 		color: $heading-color-1;
 	}
@@ -80,6 +84,7 @@ main.index-page {
 		margin-top: 5vh;
 		background: $bg-color-article;
 		box-shadow: 0 2px 4px 0 rgba(201, 201, 201, 0.5);
+
 		&:nth-of-type(1),
 		&:nth-of-type(2) {
 			img {
@@ -87,6 +92,7 @@ main.index-page {
 				width: 75%;
 			}
 		}
+
 		&:nth-of-type(3) {
 			img {
 				padding: 0;
@@ -97,10 +103,9 @@ main.index-page {
 
 	.text-wrapper {
 		padding: 2em 1em 1em 1em;
-		max-width: 80%;
-
+		max-width: 85%;
 		@media (min-width: 670px) {
-			padding: 2em 2em;
+			padding: 2em 1.5em;
 		}
 	}
 
@@ -130,13 +135,23 @@ main.index-page {
 			}
 		}
 	}
+
+	button.read-more {
+		background: white;
+		color: $text-color-2;
+		width: 100px;
+		height: 30px;
+		border: solid 1px $text-color-2;
+		border-radius: 10px;
+	}
 }
+
+//Layout för skärmar större än 670px
 
 @media (min-width: 670px) {
 	article.index {
 		display: flex;
-		align-items: center;
-		justify-content: center;
+
 		.image-wrapper {
 			flex-basis: 50%;
 			padding: 3em;
@@ -153,6 +168,8 @@ main.index-page {
 		}
 	}
 }
+
+//Layout för skärmar större än 1000px
 
 @media (min-width: 1000px) {
 	.articles__wrapper {
@@ -193,13 +210,4 @@ main.index-page {
 			justify-content: space-evenly;
 		}
 	}
-}
-
-button.read-more {
-	background: white;
-	color: #2c4f80;
-	width: 100px;
-	height: 30px;
-	border: solid 1px #2c4f80;
-	border-radius: 10px;
 }
