--- a/styles/partials/_top-menu.scss
+++ b/styles/partials/_top-menu.scss
@@ -1,24 +1,23 @@
 .top-menu {
-	//transition: all ease-in 500ms;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	justify-items: center;
 	align-items: center;
-	background: #061b38;
+	background: $bg-color-nav;
 	width: 100%;
-	padding: 5vh 1vh;
+	padding: 3vh 1vw 6vh 1vw;
 	@media (min-width: 600px) {
 		flex-direction: row;
 		align-items: center;
-		padding: 3vh 3vh;
+		padding: 3vh 2.5vw;
 	}
 
 	&__logo {
 		transition: all ease-in 500ms;
 		position: relative;
 		width: 60px;
-		padding: 3vh 0;
+		padding: 3vh 0 5vh 0;
 		@media (min-width: 600px) {
 			width: 50px;
 			padding: 0;
@@ -56,23 +55,23 @@
 
 		&__link {
 			list-style: none;
-			padding: 2px 2px;
+			padding: 5px 2px;
 			@media (min-width: 600px) {
 				padding: 0 10px;
 			}
 
 			a {
-				color: white;
+				color: $text-color-3;
 				text-align: center;
 				text-decoration: none;
 				font-weight: bold;
 				padding: 10px;
 				margin: 0;
 				&:hover {
-					color: #e32700;
+					color: $highlight-color;
 				}
 				&.active {
-					text-decoration: underline 2px #e32700;
+					text-decoration: 2px underline $highlight-color;
 				}
 			}
 		}
