--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap");
 @import "./partials/variables";
+
 @import "./partials/top-menu";
 @import "./partials/header";
 @import "./partials/footer";
-@import "./partials/join";
+
+@import "./partials/index";
 @import "./partials/faq";
 @import "./partials/join";
-@import "./partials/index";
 
 * {
 	box-sizing: border-box;
@@ -17,28 +18,35 @@
 body {
 	width: 100%;
 	min-width: 200px;
+	font-family: $primary-font;
 }
 
 nav {
 	background: $bg-color-nav;
 }
 
-nav,
-header,
-main {
-	font-family: "Montserrat", sans-serif;
-}
-
 h2 {
 	font-weight: 800;
+	font-size: 24px;
+	@media (min-width: 600px) {
+		font-size: 36px;
+	}
 }
 
 h3 {
 	font-weight: 500;
+	font-size: 18px;
+	@media (min-width: 600px) {
+		font-size: 24px;
+	}
 }
 
 p {
 	line-height: 1.5;
+	font-size: 14px;
+	@media (min-width: 600px) {
+		font-size: 16px;
+	}
 }
 
 strong {
